// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox alt 1`] = `
.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 18px;
  height: 18px;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  opacity: 0;
  overflow: hidden;
  width: 100%;
  height: 100%;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: 2px;
  color: gray;
}

input:checked ~ .c0 {
  color: primary;
}

input:focus ~ .c0 {
  box-shadow: active;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: none;
  width: 18px;
  height: 18px;
}

input:checked:not(:disabled) ~ .c0 {
  display: block;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: none;
  width: 18px;
  height: 18px;
}

input:not(:checked):not(:disabled) ~ .c0 {
  display: block;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: none;
  width: 18px;
  height: 18px;
}

input:disabled:not(:checked) ~ .c0 {
  display: block;
}

.c7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: none;
  width: 18px;
  height: 18px;
}

input:checked:disabled ~ .c0 {
  display: block;
}

<div
  className="c0 c1"
>
  <input
    className="c0 c2"
    type="checkbox"
  />
  <svg
    aria-hidden="true"
    className="c0 c3 c0 c4"
    fill="none"
    height={18}
    viewBox="0 0 18 18"
    width={18}
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="#D64A36"
      height="17"
      rx="1.5"
      stroke="#D64A36"
      width="17"
      x="0.5"
      y="0.5"
    />
    <path
      d="M4.5 10L8 13L14 4"
      stroke="white"
    />
  </svg>
  <svg
    aria-hidden="true"
    className="c0 c5 c0 c4"
    fill="none"
    height={18}
    viewBox="0 0 18 18"
    width={18}
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="white"
      height="17"
      rx="1.5"
      stroke="#E7E7E6"
      width="17"
      x="0.5"
      y="0.5"
    />
  </svg>
  <svg
    aria-hidden="true"
    className="c0 c6 c0 c4"
    fill="none"
    height={18}
    viewBox="0 0 18 18"
    width={18}
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="#F5F5F5"
      height="17"
      rx="1.5"
      stroke="#F5F5F5"
      width="17"
      x="0.5"
      y="0.5"
    />
  </svg>
  <svg
    aria-hidden="true"
    className="c0 c7 c0 c4"
    fill="none"
    height={18}
    viewBox="0 0 18 18"
    width={18}
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="#F5F5F5"
      height="17"
      rx="1.5"
      stroke="#F5F5F5"
      width="17"
      x="0.5"
      y="0.5"
    />
    <path
      d="M4.5 10L8 13L14 4"
      stroke="#BABABA"
    />
  </svg>
</div>
`;

exports[`Checkbox default 1`] = `
.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 18px;
  height: 18px;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  opacity: 0;
  overflow: hidden;
  width: 100%;
  height: 100%;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: 2px;
  color: gray;
}

input:checked ~ .c0 {
  color: primary;
}

input:focus ~ .c0 {
  box-shadow: active;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: none;
  width: 18px;
  height: 18px;
}

input:checked:not(:disabled) ~ .c0 {
  display: block;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: none;
  width: 18px;
  height: 18px;
}

input:not(:checked):not(:disabled) ~ .c0 {
  display: block;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: none;
  width: 18px;
  height: 18px;
}

input:disabled:not(:checked) ~ .c0 {
  display: block;
}

.c7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: none;
  width: 18px;
  height: 18px;
}

input:checked:disabled ~ .c0 {
  display: block;
}

<div
  className="c0 c1"
>
  <input
    className="c0 c2"
    type="checkbox"
  />
  <svg
    aria-hidden="true"
    className="c0 c3 c0 c4"
    fill="none"
    height={18}
    viewBox="0 0 18 18"
    width={18}
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="white"
      height="17"
      rx="1.5"
      stroke="#F5F5F5"
      width="17"
      x="0.5"
      y="0.5"
    />
    <path
      d="M4.5 10L8 13L14 4"
      stroke="#D64A36"
    />
  </svg>
  <svg
    aria-hidden="true"
    className="c0 c5 c0 c4"
    fill="none"
    height={18}
    viewBox="0 0 18 18"
    width={18}
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="white"
      height="17"
      rx="1.5"
      stroke="#E7E7E6"
      width="17"
      x="0.5"
      y="0.5"
    />
  </svg>
  <svg
    aria-hidden="true"
    className="c0 c6 c0 c4"
    fill="none"
    height={18}
    viewBox="0 0 18 18"
    width={18}
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="#F5F5F5"
      height="17"
      rx="1.5"
      stroke="#F5F5F5"
      width="17"
      x="0.5"
      y="0.5"
    />
  </svg>
  <svg
    aria-hidden="true"
    className="c0 c7 c0 c4"
    fill="none"
    height={18}
    viewBox="0 0 18 18"
    width={18}
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="#F5F5F5"
      height="17"
      rx="1.5"
      stroke="#F5F5F5"
      width="17"
      x="0.5"
      y="0.5"
    />
    <path
      d="M4.5 10L8 13L14 4"
      stroke="#BABABA"
    />
  </svg>
</div>
`;
